--- a/.github/workflows/buildAndPush.yml
+++ b/.github/workflows/buildAndPush.yml
@@ -11,20 +11,15 @@ jobs:
     environment: image-build-and-push
     strategy:
       matrix:
-        include:
-          - RAY_VERSION: 1.11.0-gpu
-            TORCH_VERSION: 1.11.0+cu115
-          - RAY_VERSION: 1.11.0-gpu
-            TORCH_VERSION: 1.12.0+cu116
-          - RAY_VERSION: 1.13.0-gpu
-            TORCH_VERSION: 1.11.0+cu115
-          - RAY_VERSION: 1.13.0-gpu
-            TORCH_VERSION: 1.12.0+cu116
+          PYTHON_VERSION: [py37, py38, py39]
+          RAY_VERSION: [1.11.0, 1.12.0, 1.13.0]
+          TORCH_VERSION: [1.12.0+cu116, 1.11.0+cu115]
     steps:
       # docker login source https://github.com/docker/login-action
       - uses: docker/login-action@v2
         with:
           registry: ghcr.io
+          # Note: these values can be configured under https://github.com/foundation-model-stack/base-images/settings/environments/614355731/edit
           username: ${{ secrets.GH_REGISTRY_USER }}
           password: ${{ secrets.GH_REGISTRY_PUSH_TOKEN }}
 
@@ -33,6 +28,6 @@ jobs:
 
       - name: build and push
         env:
-          RAY_VERSION: ${{ matrix.RAY_VERSION }}
+          RAY_VERSION: ${{ matrix.RAY_VERSION }}-${{matrix.PYTHON_VERSION}}-gpu
           TORCH_VERSION: ${{ matrix.TORCH_VERSION }}
         run: ./buildAndPush.sh
