--- a/nightly-pytorch-compile/Dockerfile
+++ b/nightly-pytorch-compile/Dockerfile
@@ -15,6 +15,8 @@ RUN apt-get -y -o Acquire::Max-FutureTime=86400 update && \
     apt-get install -y cuda-compiler-11-7 cuda-libraries-11-7 cuda-libraries-dev-11-7 && \
     apt-get -y clean
 
+# This is important for certain pytorch deps
+RUN pip install --upgrade setuptools
 # permanent dependencies, put on top to avoid re-build
 RUN pip install \
     transformers==4.26.1 \
@@ -43,3 +45,5 @@ RUN chgrp -R 0 /opt/conda && \
 # RUN pwd && pwd && pwd && pwd
 # RUN pip install --pre torch==1.14.0.dev20221013+cu117 torchvision --extra-index-url https://download.pytorch.org/whl/nightly/cu117
 RUN pip install --pre torch torchvision --extra-index-url https://download.pytorch.org/whl/nightly/cu117 --no-cache-dir
+# This is only until the python nightlies are fixed!!
+RUN pip install --upgrade --pre triton
