--- a/nightly-pytorch-compile/Dockerfile
+++ b/nightly-pytorch-compile/Dockerfile
@@ -12,16 +12,18 @@ RUN apt-get -y -o Acquire::Max-FutureTime=86400 update && \
     wget https://developer.download.nvidia.com/compute/cuda/repos/debian11/x86_64/cuda-keyring_1.0-1_all.deb && \
     dpkg -i cuda-keyring_1.0-1_all.deb && \
     apt-get -y -o Acquire::Max-FutureTime=86400 update && \
-    apt-get install -y cuda-compiler-11-7 cuda-libraries-11-7 cuda-libraries-dev-11-7 && \
+    apt-get install -y cuda-compiler-11-7 cuda-libraries-11-7 cuda-libraries-dev-11-7 cuda-tools-11-7 && \
     apt-get -y clean
 
 # This is important for certain pytorch deps
 RUN pip install --upgrade setuptools
 # permanent dependencies, put on top to avoid re-build
 RUN pip install \
-    transformers==4.26.1 \
+    transformers==4.27.4 \
     aim==3.16.0 \
     datasets \
+    accelerate \
+    optimum \
     tqdm \
     protobuf \
     colorama \
