Update base image with learnings from compile image

--- a/nightly-pytorch/Dockerfile
+++ b/nightly-pytorch/Dockerfile
@@ -12,13 +12,21 @@ RUN apt-get -y -o Acquire::Max-FutureTime=86400 update && \
     wget https://developer.download.nvidia.com/compute/cuda/repos/debian11/x86_64/cuda-keyring_1.0-1_all.deb && \
     dpkg -i cuda-keyring_1.0-1_all.deb && \
     apt-get -y -o Acquire::Max-FutureTime=86400 update && \
-    apt-get install -y cuda-tools-11-7 && \
+    apt-get install -y cuda-tools-11-8 && \
     apt-get -y clean
 
-# permanent dependencies, put on top to avoid re-build
+# This is important for certain pytorch deps
+RUN pip install --upgrade setuptools
+
+# PYtorch nightly install
+RUN pip install --pre --upgrade torch torchvision --extra-index-url https://download.pytorch.org/whl/nightly/cu118 --no-cache-dir
+
+# permanent dependencies, we put them after torch so we don't end up installing torch twice and wasting a lot of space
+# (each install of torch is about 2GB!!!)
+# decision has been made to have them as the latest version always, as this is a nightly image after all
 RUN pip install \
-    transformers==4.27.4 \
-    aim==3.16.0 \
+    transformers \
+    aim \
     datasets \
     tqdm \
     protobuf \
@@ -37,11 +45,5 @@ RUN chgrp -R 0 . && \
     chmod -R g=u .
 
 RUN chgrp -R 0 /opt/conda && \
+    chmod -R a+w /opt/conda && \
     chmod -R g=u /opt/conda
-
-# put this at the end as we change this often, we add dummy steps to force rebuild the following lines when needed
-# RUN pwd && pwd && pwd && pwd
-# RUN pip install --pre torch==1.14.0.dev20221013+cu117 torchvision --extra-index-url https://download.pytorch.org/whl/nightly/cu117
-
-# !!!!! Reverting to CUDA 11.5 / NCCL 2.11.4 
-RUN pip install --pre --upgrade torch torchvision --extra-index-url https://download.pytorch.org/whl/nightly/cu115 --no-cache-dir
