--- a/nightly-pytorch-compile/Dockerfile
+++ b/nightly-pytorch-compile/Dockerfile
@@ -13,7 +13,6 @@ RUN apt-get -y -o Acquire::Max-FutureTime=86400 update && \
     dpkg -i cuda-keyring_1.0-1_all.deb && \
     apt-get -y -o Acquire::Max-FutureTime=86400 update && \
     apt-get install -y cuda-compiler-11-8 cuda-nsight-systems-11-8 && \
-    apt-get install -y libcublas-11-8 libcublas-dev-11-8 libcusparse-11-8 libcusparse-dev-11-8 libcusolver-11-8 libcusolver-dev-11-8 && \
     apt-get -y clean
 
 RUN chgrp -R 0 /opt/conda && \
@@ -49,11 +48,14 @@ RUN pip install \
     chmod -R g=u /opt/conda
 
 # xformers install (built from source)
-ENV FORCE_CUDA=1
 ENV CUDA_HOME=/usr/local/cuda
-RUN pip install -v -U git+https://github.com/facebookresearch/xformers.git@main#egg=xformers --no-cache-dir && \
+ENV TORCH_CUDA_ARCH_LIST="8.0"
+RUN apt-get install -y libcublas-11-8 libcublas-dev-11-8 libcusparse-11-8 libcusparse-dev-11-8 libcusolver-11-8 libcusolver-dev-11-8 && \
+    pip install -v -U git+https://github.com/facebookresearch/xformers.git@main#egg=xformers --no-cache-dir && \
     chmod -R g+w /opt/conda && \
-    chmod -R g=u /opt/conda
+    chmod -R g=u /opt/conda && \
+    apt-get uninstall -y libcublas-11-8 libcublas-dev-11-8 libcusparse-11-8 libcusparse-dev-11-8 libcusolver-11-8 libcusolver-dev-11-8 && \
+    apt-get -y clean
 
 # setup .aim_profile (needed to get aim running)
 RUN mkdir -p ${HOME} && \
