--- a/nightly-pytorch-compile/Dockerfile
+++ b/nightly-pytorch-compile/Dockerfile
@@ -49,6 +49,7 @@ RUN pip install \
 
 # xformers install (built from source)
 ENV CUDA_HOME=/usr/local/cuda
+ENV MAX_JOBS=2
 ENV TORCH_CUDA_ARCH_LIST="7.0;7.5;8.0;8.6"
 RUN apt-get install -y libcublas-11-8 libcublas-dev-11-8 libcusparse-11-8 libcusparse-dev-11-8 libcusolver-11-8 libcusolver-dev-11-8 libcurand-11-8 libcurand-dev-11-8 && \
     pip install -v -U git+https://github.com/facebookresearch/xformers.git@main#egg=xformers --no-cache-dir && \
