--- a/nightly-pytorch-compile-clang/Dockerfile
+++ b/nightly-pytorch-compile-clang/Dockerfile
@@ -15,9 +15,7 @@ RUN apt-get -y -o Acquire::Max-FutureTime=86400 update && \
     apt-get install -y clang cuda-compiler-12-1 cuda-nsight-systems-12-1 && \
     apt-get -y clean && \
     update-alternatives --set cc /usr/bin/clang && \
-    update-alternatives --set c++ /usr/bin/clang++ && \
-    whereis clang && \
-    whereis clang++
+    update-alternatives --set c++ /usr/bin/clang++
 
 RUN chgrp -R 0 /opt/conda && \
     chmod -R a+w /opt/conda && \
