Fix tzdata hangup

--- a/nightly-pytorch-compile/Dockerfile
+++ b/nightly-pytorch-compile/Dockerfile
@@ -4,7 +4,9 @@ ENV HOME=/homedir \
     AIM_UI_TELEMETRY_ENABLED=0 \
     MOFED_VER=23.04-1.1.3.0 \
     OS_VER=ubuntu22.04 \
-    PLATFORM=x86_64
+    PLATFORM=x86_64 \
+    DEBIAN_FRONTEND=noninteractive \
+    TZ=Etc/UTC
 
 # tools
 RUN apt-get -y -o Acquire::Max-FutureTime=86400 update && \
