--- a/.github/workflows/build-and-push-nightly-pytorch-compile.yml
+++ b/.github/workflows/build-and-push-nightly-pytorch-compile.yml
@@ -6,21 +6,39 @@ on:
     - cron: '0 3 * * *'
   workflow_dispatch:
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: foundation-model-stack/base
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     environment: image-build-and-push
+
+    permissions:
+      contents: read
+      packages: write
+      attestations: write
+      id-token: write
+    
     steps:
       # docker login source https://github.com/docker/login-action
-      - uses: docker/login-action@v2
+      - uses: docker/login-action@v3
         with:
-          registry: ghcr.io
-          # Note: these values can be configured under https://github.com/foundation-model-stack/base-images/settings/environments/614355731/edit
-          username: ${{ secrets.GH_REGISTRY_USER }}
-          password: ${{ secrets.GH_REGISTRY_PUSH_TOKEN }}
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: build and push
         run: ./nightly-pytorch-compile/buildAndPush.sh
+
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
