--- a/.github/workflows/build-and-push-nightly-pytorch-compile.yml
+++ b/.github/workflows/build-and-push-nightly-pytorch-compile.yml
@@ -32,11 +32,13 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: build and push
+        id: push
         run: ./nightly-pytorch-compile/buildAndPush.sh
 
       - name: Generate artifact attestation
         uses: actions/attest-build-provenance@v1
         with:
+          subject-path: 
           subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
